--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <div class="wrap-about">
                     <div class="w-content">
                       <p class="head-about">
-						Hanya manusia biasa yang kebetulan dilahirkan kedunia ini. Dilahirkan oleh seseorang yang sangat hebat. Dan dirawat oleh dua orang yang hebat, yang salah satunya adalah seseorang yang melahirkan tadi. Dibesarkan dan besar dikota kembang, sampai saat ini. 
+						            Hanya manusia biasa yang kebetulan dilahirkan kedunia ini. Dilahirkan dan dirawat oleh dua orang yang hebat, yang salah satunya adalah seseorang yang melahirkan. Dibesarkan dan besar dikota Bandung, sampai saat ini. 
                       </p>
                       
                       <h5 class="name">
@@ -129,9 +129,9 @@
                             <td> Ikhsan Rahmadsyah</td>
                           </tr>
                           <tr>
-                            <td class="title">No HP </td>
+                            <td class="title">No HP/WA </td>
                             <td class="break">:</td>
-                            <td> +62 8382 294 8151</td>
+                            <td> +62 8965 620 5074</td>
                           </tr>
                           <tr>
                             <td class="title">Email </td>
@@ -147,6 +147,11 @@
                             <td class="title">Line </td>
                             <td class="break">:</td>
                             <td> ikhsanrahmadsyah</td>
+                          </tr>
+                          <tr>
+                            <td class="title">Instagram </td>
+                            <td class="break">:</td>
+                            <td> ikhsanrhmdsyh_</td>
                           </tr>
                           <tr>
                             <td class="title">GitLab </td>
@@ -196,7 +201,7 @@
                             <hr>
                             <div class="text-detail">
                               <p>
-								Pendidikan resmi pertama yang saya dapatkan adalah di TK Aisyiah ini. Ditempat ini Saya tidak mendapatkan banyak kenangan, hanya kesenangan yang ada. Tapi ditempat inilah pertama kalinya Saya mengetahui bagaimana rasanya menyukai seseorang.
+								                Pendidikan resmi pertama yang saya dapatkan adalah di TK Aisyiah ini. Ditempat ini Saya tidak mendapatkan banyak kenangan, hanya kesenangan yang ada. Tapi ditempat inilah pertama kalinya Saya mengetahui bagaimana rasanya menyukai seseorang.
                               </p>
                             </div>
                           </div>
@@ -220,7 +225,7 @@
                             <hr>
                             <div class="text-detail">
                               <p>
-								Saya melanjutkan pendidikan ke sekolah dasar. Saya senang sekali Bermain. Terlebih lagi pada zaman ini masih banyak permainan tradisional yang sering dimainkan seperti Kelereng, Petak Umpet, Bancakan, Boyboyan, dan masih banyak lagi.
+								                Saya melanjutkan pendidikan ke sekolah dasar. Saya senang sekali Bermain. Terlebih lagi pada zaman ini masih banyak permainan tradisional yang sering dimainkan seperti Kelereng, Petak Umpet, Bancakan, Boyboyan, dan masih banyak lagi.
                               </p>
                             </div>
                           </div>
@@ -270,6 +275,30 @@
                             <div class="text-detail">
                               <p>
                                 Saat awal masuk sekolah ini Saya merasakan yang namanya senang, sedih, takut secara bersamaan dan bercampur aduk. Bagaimana tidak, disekolah ini sangat disiplin dan ketat sekali. Tapi Saya senang karena bisa masuk sekolah bagus dan teman-teman yang sangat Pintar.
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li>
+                      <div class="col-md-12 col-sm-12">
+                        <div class="wrap-card">
+                          <div class="card">
+                            <h2 class="year">
+                              2015 - 2018
+                            </h2>
+                            <p class="job">
+                              PERGURUAN TINGGI
+                            </p>
+                            <p class="company">
+                              Universitas Pendidikan Indonesia
+                            </p>
+                            <hr>
+                            <div class="text-detail">
+                              <p>
+                                My Journey has been started.
                               </p>
                             </div>
                           </div>
