Perubahan dan penambahan katakata

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Ikhsan Rahmadsyah - A litle piece of my story life.</title>
+    <title>Ikhsan Rahmadsyah - A little piece of my story life.</title>
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="Bodo - Simple One Page Personal" name="description">
@@ -107,7 +107,7 @@
                   <div class="wrap-about">
                     <div class="w-content">
                       <p class="head-about">
-						            Hanya manusia biasa yang kebetulan dilahirkan kedunia ini. Dilahirkan dan dirawat oleh dua orang yang hebat, yang salah satunya adalah seseorang yang melahirkan. Dibesarkan dan besar dikota Bandung, sampai saat ini. 
+						            Hanya manusia biasa yang kebetulan dilahirkan kedunia ini. Dilahirkan dan dirawat oleh dua orang yang hebat, yang salah satunya adalah seseorang yang melahirkan. Dibesarkan dan besar di kota Bandung, sampai saat ini. 
                       </p>
                       
                       <h5 class="name">
@@ -201,7 +201,7 @@
                             <hr>
                             <div class="text-detail">
                               <p>
-								                Pendidikan resmi pertama yang saya dapatkan adalah di TK Aisyiah ini. Ditempat ini Saya tidak mendapatkan banyak kenangan, hanya kesenangan yang ada. Tapi ditempat inilah pertama kalinya Saya mengetahui bagaimana rasanya menyukai seseorang.
+								Pendidikan formal pertama yang saya dapatkan adalah di TK Aisyiah ini. Bertempat tidak jauh dari rumah, tinggal jalan kaki sekitar 8 menit udah nyampe. Ditempat ini Saya tidak mendapatkan banyak kenangan, hanya kesenangan yang ada. Mulai dari bermain perosotan, ayunan, dan cungkelik cungkedang. Oh indahnya~
                               </p>
                             </div>
                           </div>
@@ -225,7 +225,7 @@
                             <hr>
                             <div class="text-detail">
                               <p>
-								                Saya melanjutkan pendidikan ke sekolah dasar. Saya senang sekali Bermain. Terlebih lagi pada zaman ini masih banyak permainan tradisional yang sering dimainkan seperti Kelereng, Petak Umpet, Bancakan, Boyboyan, dan masih banyak lagi.
+								Saya melanjutkan pendidikan ke sekolah dasar. Tempatnya gajauh juga dari rumah, kalau ini cuman 4 menit udah nyampe. Ada beberapa kenangan unik ketika berada dibangku SD. Salahsatunya yaitu sering terjadi tawuran antar sekolah karena konflik berabad-abad yg lalu (katanya). Kalo dipikir lucu juga, anak SD yang masih ingusan udah sok sok an tawuran, Haha.
                               </p>
                             </div>
                           </div>
@@ -250,8 +250,10 @@
                             <hr>
                             <div class="text-detail">
                               <p>
-                                Kemudian setelah bersenang-senang disekolah dasar, Saya melanjutkan ke jenjang yang lebih tinggi. Disini Saya belajar lebih serius. Dan disini pula saya mengenal cinta. Kemudian merasakan bagaimana mencintai dan dicintai, Tapi ya gitu akhirnya pasti menyakitkan.
-                              </p>
+                                Selanjutnya naik ke jenjang SMP. Tempatnya cukup jauh, harus naik angkot dilanjut naik kretek/delman. Meskipun tempatnya tidak dilalui oleh angkot, bukan berarti sekolah ini jelek banget ya. Meskipun memang muridnya banyak yang barbar, haha. Ada beberapa hal unik ketika bersekolah disini. Mulai dari menunggu delman sambil jalan dan ngobrol, yang akhirnya sampai dirumah dengan berjalan kaki. Sampai pernah diarah sama orang, mau diajak berantem gara gara saya akrab dengan perempuannya, Huhu.
+                                 
+                              </p><p> </p>
+                              <p>Tetapi terlepas dari itu, saya menikmati masa SMP dengan teman yang asik, guru yang enak, dan kisah percintaan yang cukup lucu. Hehe.</p>
                             </div>
                           </div>
                         </div>
@@ -274,7 +276,7 @@
                             <hr>
                             <div class="text-detail">
                               <p>
-                                Saat awal masuk sekolah ini Saya merasakan yang namanya senang, sedih, takut secara bersamaan dan bercampur aduk. Bagaimana tidak, disekolah ini sangat disiplin dan ketat sekali. Tapi Saya senang karena bisa masuk sekolah bagus dan teman-teman yang sangat Pintar.
+                                Lalu lanjut ke jenjang SMK, ngambil jurusan RPL. Tempatnya cukup jauh juga, tetapi tinggal naik angkot sekali, dan masuk ke gang nya tinggal berjalan kaki. Dibanding kenangannya, di sekolah ini lebih banyak tekanannya. Mulai dari peraturan yang ketat, character building, sampai guru bengkel yang bikin jengkel. Tapi dibalik semua tekanan itu, ada teman-teman yang saling support satu sama lain untuk melewati segala rintangan. Adapun hal menarik ketika di SMK ini. Salah satunya adalah ketika itu kita sekelas lagi males buat ketemu dan belajar sama guru disana (karena ngajarnya yg gabener). Alhasil kita membuat alibi ingin mencuci karpet kelas karena kehujanan dan bau. Dan selama 2 - 3 minggu setiap pelajaran bengkel, kita bukan belajar. Malah nyuci karpet kelas. Haha.
                               </p>
                             </div>
                           </div>
@@ -298,7 +300,7 @@
                             <hr>
                             <div class="text-detail">
                               <p>
-                                My Journey has been started.
+                                Sebenarnya gaada niatan buat lanjut ke perguruan tinggi, tapi ketika udah dikasih jalan, yaudah jalani. Saya ngambil jurusan Pendidikan Akuntansi di UPI. Berbanding terbalik dengan semasa SMK, di Pendidikan Akuntansi ini langka lakilaki. Dari satu angkatan saya, hanya ada 11 lakilaki saja. Dan itu cukup menyedihkan, huhu. Saya kuliah di UPI tidak ngekos, melainkan pulang pergi dari rumah, setiap hari. Kalo bahasa kerennya mah "dugdag". Memakan waktu sekitar 1 jam diperjalanan, cukup menguras tenaga sebenarnya. Tapi ya, banyak hikmah dan manfaatnya juga sih. Saya juga mengikuti himpunan mahasiswa, sudah berjalan selama 1 tahun lebih. Sekarang sedang belajar dan masih akan terus belajar disini.
                               </p>
                             </div>
                           </div>
@@ -373,13 +375,13 @@
           <div class="footer-top">
             <ul class="socials">
               <li class="facebook">
-                <a href="http://www.facebook.com/ikhsan.rahmadsyah" data-hover="Facebook">Facebook</a>
+                <a href="http://www.facebook.com/ikhsan.rahmadsyah" data-hover="Facebook" target="_blank">Facebook</a>
               </li>
               <li class="twitter">
-                <a href="http://www.twitter.com/namanyaikhsanr" data-hover="Twitter">Twitter</a>
+                <a href="http://www.twitter.com/namanyaikhsanr" data-hover="Twitter" target="_blank">Twitter</a>
               </li>
               <li class="instagram">
-                <a href="http://www.instagram.com/ikhsanrhmdsyh_" data-hover="Instagram">Instagram</a>
+                <a href="http://www.instagram.com/ikhsanrhmdsyh_" data-hover="Instagram" target="_blank">Instagram</a>
               </li>
             </ul>
           </div>
